k8s_deployments/rotten-potatoes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rotten-potatoes-web
  namespace: rotten-potatoes
spec:
  ingressClassName: cilium
  rules:
  - host: rotten-potatoes.pauloponciano.digital
    http:
      paths:
      - backend:
          service:
            name: rotten-potatoes-web
            port:
              number: 80
        path: /
        pathType: Prefix
